# s11n_dev

./: .gitignore  main.cpp  only_crc.cpp  only_crc.h  s11n.cmake  s11n.h  s11n.pri  s11n.pro  s11n_decoder.cpp  s11n_decoder.h  s11n_encoder.cpp  s11n_encoder.h  s11n_introspection.h  s11n_name_of_type.h  s11n_reader.cpp  s11n_reader.h  s11n_serial.cpp  s11n_serial.h  s11n_size.cpp  s11n_size.h  s11n_writer.cpp  s11n_writer.h
impl/: container_helper.h  crc.cpp  crc.h  decode.h  description.cpp  description.h  encode.h  endian.cpp  endian.h  load_save.cpp  load_save.h  metaargs_helper.h  name_of_type.h  name_of_type_from_pf.cpp  name_of_type_from_pf.h  reader.h  s11n_introspection.cpp  s11n_type_traits.cpp  s11n_type_traits.h  serializer.cpp  serializer.h  signature.cpp  signature.h  signature_1_name_of_type.h  signature_2_description.h  signature_2_metatype.h  signature_3_description.h  signature_3_serial_tuple.h  signature_4_serial_tuple.h  signature_metaargs.h  size.h  std_list.h  std_string.h  std_void_t.h  str_view.cpp  str_view.h  tuple_helper.cpp  tuple_helper.h  type_spec.h  void_type.h  (+7 more)
impl_s11n/: container_helper.h  crc.h  decode.h  encode.h  endian.h  metaargs_helper.h  name_of_type_from_pf.h  reader.cpp  reader.h  signature.h  signature_1_name_of_type.h  signature_2_metatype.h  signature_3_serial_tuple.h  size.h  std_string.h  str_view.h  tuple_helper.h  type_spec.h  void_type.h  writer.h
test_s11n/: CMakeLists.txt  form_as_one_file.cpp  form_as_one_file.pro  form_as_one_file.sh  main.cpp  test_container_names.h  test_encoder.h  test_main.h  test_metaargs.h  test_name_of_type.cpp  test_name_of_type.h  test_plains.h  test_s11n.pro  test_signature.h  tests_preparing.h
zzz/: main.cpp  s11n.pro  s11n_encoder.h  s11n_name_of_type.cpp  s11n_reader.h  s11n_serial.h  s11n_size.cpp  s11n_size.h  s11n_writer.h
